Fixed grid overflow on mobile

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -232,8 +232,8 @@
         justify-content: center;
         text-align: center;
         width: 100%;
-        height: 30vh;
-        padding: 3rem;
+        height: min-content;
+        padding: max(8vw, 3rem);
         background-size: cover;
         background-position: center;
         transition: .2s;
@@ -311,9 +311,11 @@
 
     @media (min-width: 1200px) {
         flex-direction: row;
+        min-height: 40vh;
 
         a {
-            height: clamp(400px, 50vh, 500px);
+            // min-height: clamp(400px, 50vh, 500px);
+            height: unset;
 
             h3 {
                 font-size: clamp(30px, 3vw, 60px);
